--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>vite-lp-template</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet" />
   </head>
   <body>
+    <header>header</header>
+    <main>
+      <div class="container mx-auto">main</div>
+    </main>
+    <footer>footer</footer>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
